Fix installer screen gap
git-svn-id: http://activereload.svn.engineyard.com/warehouse/trunk@2303 8456e5f2-bb15-0410-bd20-b44782a1fb1e

--- a/public/stylesheets/installer.css
+++ b/public/stylesheets/installer.css
@@ -43,6 +43,10 @@ div.overlay-form {
   background: url(../images/app/sheet.png) bottom left no-repeat;
 }
 
+div.sheet-back {
+  background: transparent url(../images/app/install/sheet-mid.png) 0 50% repeat-y;
+}
+
 #installer h1 {
   background: url(../images/app/install/splash.png)  no-repeat;
   height: 88px;
